scripts/nullaway/wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8.txt
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/nio/samples/JServer.java:148: error: [NullAway] passing @Nullable parameter 'sel' where @NonNull is required
        ListenerThread listener = new ListenerThread(sel);
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/daily/FoodBuilder.java:38: error: [NullAway] dereferenced expression weakRef.get() is @Nullable
        System.out.println(weakRef.get().getMeatAmount());
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:96: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:410: error: [NullAway] passing @Nullable parameter 'v' where @NonNull is required
                b.append(toString(v, (tagName == null) ? "array" : tagName));
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:294: error: [NullAway] dereferenced expression bean is @Nullable
        Class klass = bean.getClass();
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:195: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:231: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:290: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/TestXML2JSON.java:36: error: [NullAway] dereferenced expression json.toString() is @Nullable
        System.out.println("Length : " + json.toString().length());
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8be3f02398_vnamboo_LearnJava_tgz-pJ8-org_json_TestJ8/src/test/generics/SinkTest.java:16: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return lastItemFlushed;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
